# ft_malloc

./: .gitignore  CMakeLists.txt  Makefile  run.sh  test.sh
include/: ft_malloc.h  malloc.h  ualloc.h
libft/: CMakeLists.txt  Makefile
libft/src/io/: stdout.c
src/: bin.c  bin.h  bin_dyn.c  bin_lookup.c  chunk.c  chunk.h  class.c  class.h  config.h  makefile.mk  malloc.c  malloc_2.c  pool.c  pool.h  scope.c  ualloc.c  ufree.c  urealloc.c
test/: test0.c  test1.c  test2.c  test3.c  test3_bis.c  test4.c  test5.c  test6.c  test7.c  test8.c  test9.c  wow.c
